--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.3.0",
   "description": "Redux middleware for sending error reports to Sentry through raven-js.",
   "main": "./index.js",
-  "dependencies": {
+  "peerDependencies": {
     "raven-js": "^1.1.19"
   },
   "devDependencies": {
